# acms-langgraph-poc

./: .env.example  .gitignore  README.md  launch_monitor.ps1  launch_run_marimo_monitor.ps1  pyproject.toml  requirements.txt  workspace.py
docs/: ACMS-Monitor-Sequence.md
registry/: __init__.py  db.py  records.py  sentinels.py  skills.py  status.py  tasks.py
system_md/: README.md  data_extract.md  text_summarize.md  text_transform.md  validation_format.md  validation_schema.md
tasks/: acms_proof.py
tests/: test_registry.py
ui/: aces_monitor_backup_20260314.py  aces_monitor_backup_langgraph.py  acms_monitor.py
ui/acms_monitor_v2/: aces_monitor.py
ui/data/: __init__.py  loader.py  mock.py
